--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,6 +5,7 @@ COPY package*.json ./
 COPY prisma ./prisma/
 RUN npm install
 COPY . .
+RUN npx prisma generate
 RUN npm run build
 
 # Stage 2: Runner
